src/objects/Baggage_Claim_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Issuing_Id__c</fullName>
        <formula>CASESAFEID(Baggage_Claim__r.Airline_Issuing_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is some help text</inlineHelpText>
        <label>Account Issuing Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Receiving_Id__c</fullName>
        <formula>CASESAFEID(Baggage_Claim__r.Airline_receiving__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Receiving Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Technical formula field to have the Account column visible in the Comments related list of the Prorate Request and of the PIR Form. (Formula is needed to overcome Private Account&apos;s OWD).</description>
        <formula>CreatedBy.Contact.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baggage_Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Prorate Request</label>
        <referenceTo>Baggage_Claim__c</referenceTo>
        <relationshipLabel>Prorate Request Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Prorate_Dept_Airline_issuing__c</fullName>
        <label>Email (Prorate Dept.) Airline issuing</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Prorate_Dept_Airline_receiving__c</fullName>
        <label>Email (Prorate Dept.) Airline receiving</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PIR_File_Ref__c</fullName>
        <formula>Baggage_Claim__r.Parent_PIR_Form__r.PIR_File_Ref__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent PIR Ref</label>
        <type>Text</type>
    </fields>
    <label>Prorate Request Comment</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Comment N°</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prorate Request Comments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>